# NNTools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
experiment/: __init__.py
nntools/: __init__.py  experiment.py  supervised_experiment.py  trainer.py
nntools/dataset/: __init__.py  abstract_dataset.py  abstract_image_dataset.py  classif_dataset.py  functions.py  image_dataset.py  image_tools.py  multi_image_dataset.py  seg_dataset.py  segmentation.py  tools.py  utils.py
nntools/dataset/image/: __init__.py  decorators.py  preprocess.py  seg_dataset.py  tools.py
nntools/experiment/: __init__.py  classification.py  experiment.py  manager.py  prunning_handler.py  segmentation.py  supervised_experiment.py  utils.py
nntools/nnet/: __init__.py  abstract_nn.py  loss.py  ops.py  utils.py
nntools/nnet/models/: __init__.py  deeplabv3.py  multiTaskUnet.py  multitask_unet.py  unets.py
nntools/nnet/ops/: __init__.py  conv.py  deform_conv.py
nntools/report/: graph.py
nntools/tracker/: __init__.py  log_mlflow.py  metrics.py  tracker.py  warnings.py
nntools/utils/: __init__.py  cast.py  config.py  const.py  io.py  misc.py  multiprocessing.py  optims.py  path.py  plotting.py  random.py  sampler.py  scheduler.py  torch.py
notebooks/: Config.ipynb  Datasets.ipynb  config_example.yaml
src/nntools/: __init__.py
src/nntools/dataset/: __init__.py  abstract_image_dataset.py  classif_dataset.py  constants.py  image_dataset.py  image_tools.py  seg_dataset.py  tools.py  utils.py
src/nntools/nnet/: __init__.py  loss.py
src/nntools/nnet/ops/: conv.py  deform_conv.py
src/nntools/report/: plots.py
src/nntools/tracker/: __init__.py  log_mlflow.py  metrics.py  tracker.py
src/nntools/utils/: __init__.py  config.py  const.py  io.py  misc.py  plotting.py
tests/: c_file_test.yaml  mosaic_test.ipynb  mosaic_test.py  test.py
